Reformat to house style; fix all resulting compiler and unused-code warnings
Applies the Spotless formatter/import-order pass across the codebase,
then cleans up everything it and -Werror surfaced: a deprecated URL
constructor, a this-escape risk, a raw Class type, three cases of a
Javadoc comment stranded between annotations, two orphaned Javadoc
blocks, a test helper's close() declaring InterruptedException, a
redundant cast, an unused field, seven unused locals in SvgPathData's
intentionally-partial command parsing, and one dead private test
helper.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GVtYsqhxUeGU9v5WhRtX4E